fixed code to create and destroy cloud resources

--- a/tox.ini
+++ b/tox.ini
@@ -50,7 +50,7 @@ commands =
     stream: ansible-playbook -i inventories/production stream_twitter.yml --tags {posargs}
     stream_local: python3 twitter_s3.py
     stream_local: python3 read_data.py
-    ci: python3 papermill_runner.py
+    ci: python3 papermill_runner.py --action {posargs}
     lint: pre-commit autoupdate
     lint: pre-commit install
     lint: pre-commit run -v --all-files --show-diff-on-failure {posargs}
