--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ deps =
     ci: {[base]deps}
 commands =
     build: jupyter lab
-    provision: ansible-playbook -i inventories/production manage_host.yml
+    provision: ansible-playbook -i inventories/production manage_host.yml --tags {posargs}
     stream: ansible-playbook -i inventories/production stream_twitter.yml --tags {posargs}
     stream_local: python3 twitter_s3.py
     stream_local: python3 read_data.py
