added option to stream locally for checking purposes

--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,7 @@ deps =
     stream_local: python-dotenv==0.19.2
     stream_local: tweepy==4.4.0
     stream_local: pandas==1.3.5
+    stream_local: boto3==1.20.26
     ci: {[jupyter]deps}
     ci: papermill==2.3.3
     ci: {[base]deps}
@@ -49,7 +50,7 @@ commands =
     provision: ansible-playbook -i inventories/production manage_host.yml --tags {posargs}
     stream: ansible-playbook -i inventories/production stream_twitter.yml --tags {posargs}
     stream_local: python3 twitter_s3.py
-    stream_local: python3 read_data.py
+    ; stream_local: python3 read_data.py
     ci: python3 papermill_runner.py --action {posargs}
     lint: pre-commit autoupdate
     lint: pre-commit install
