--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ statistics = True
 show-source = True
 
 [tox]
-envlist = py{39}-{lint,build,ci,provision,stream,stream_local}
+envlist = py{39}-{lint,build,ci,provision,stream,stream_check}
 skipsdist = True
 skip_install = True
 basepython =
@@ -30,27 +30,29 @@ platform = build: linux
            ci: linux
            provision: linux
            stream: linux
-           stream_local: linux
+           stream_check: linux
 passenv = *
 deps =
     lint: pre-commit
     build: {[jupyter]deps}
     build: {[base]deps}
-    provision: ansible==5.0.1
-    stream: ansible==5.0.1
-    stream_local: python-dotenv==0.19.2
-    stream_local: tweepy==4.4.0
-    stream_local: pandas==1.3.5
-    stream_local: boto3==1.20.26
+    provision: ansible==5.1.0
+    stream: ansible==5.1.0
+    stream: python-dotenv==0.19.2
+    stream: tweepy==4.4.0
+    stream: psutil==5.8.0
+    stream: boto3==1.20.26
+    stream_check: tweepy==4.4.0
+    stream_check: boto3==1.20.26
+    stream_check: pandas==1.3.5
     ci: {[jupyter]deps}
     ci: papermill==2.3.3
     ci: {[base]deps}
 commands =
     build: jupyter lab
     provision: ansible-playbook -i inventories/production manage_host.yml --tags {posargs}
-    stream: ansible-playbook -i inventories/production stream_twitter.yml --tags {posargs}
-    stream_local: python3 twitter_s3.py
-    ; stream_local: python3 read_data.py
+    stream: python3 streamer.py {posargs}
+    stream_check: python3 twitter_s3.py --local-csv-fpath='CSV_TWEETS_FILE.csv' --delivery-stream-name=''
     ci: python3 papermill_runner.py --action {posargs}
     lint: pre-commit autoupdate
     lint: pre-commit install
