--- a/tox.ini
+++ b/tox.ini
@@ -40,9 +40,11 @@ deps =
     stream: ansible==5.1.0
     stream: python-dotenv==0.19.2
     stream: tweepy==4.4.0
+    stream: emoji==1.6.1
     stream: psutil==5.8.0
     stream: boto3==1.20.26
     stream_check: tweepy==4.4.0
+    stream_check: emoji==1.6.1
     stream_check: boto3==1.20.26
     stream_check: pandas==1.3.5
     ci: {[jupyter]deps}
