--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ statistics = True
 show-source = True
 
 [tox]
-envlist = py{39}-{lint,build,ci,provision,stream,stream_check}
+envlist = py{39}-{lint,build,ci,provision,stream,stream_check,dash}
 skipsdist = True
 skip_install = True
 basepython =
@@ -31,6 +31,7 @@ platform = build: linux
            provision: linux
            stream: linux
            stream_check: linux
+           dash: linux
 passenv = *
 deps =
     lint: pre-commit
@@ -47,6 +48,10 @@ deps =
     stream_check: emoji==1.6.1
     stream_check: boto3==1.20.26
     stream_check: pandas==1.3.5
+    dash: dash-bootstrap-components==1.0.2
+    dash: dash==2.0.0
+    dash: gunicorn==20.1.0
+    dash: pandas==1.3.5
     ci: {[jupyter]deps}
     ci: papermill==2.3.3
     ci: {[base]deps}
@@ -56,6 +61,7 @@ commands =
     stream: python3 streamer.py {posargs}
     stream_check: python3 twitter_s3.py --local-csv-fpath='CSV_TWEETS_FILE.csv' --delivery-stream-name=''
     ci: python3 papermill_runner.py --action {posargs}
+    dash: python3 app.py
     lint: pre-commit autoupdate
     lint: pre-commit install
     lint: pre-commit run -v --all-files --show-diff-on-failure {posargs}
