--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     hooks:
     - id: flake8
       name: Ensure flake8 compliance
-      args: ['--ignore=W605,C901,F841,W503']
+      args: ['--ignore=W605,C901,E741,F841,W503']
       language_version: python3.9
       verbose: true
   - repo: https://github.com/timothycrosley/isort
@@ -48,7 +48,7 @@ repos:
     - id: bandit
       name: Ensure compliance with security checks
       language_version: python3.9
-      args: ["--quiet", "--recursive", "--skip=B101,B108,B110,B310,B404,B603"]
+      args: ["--quiet", "--recursive", "--skip=B101,B108,B110,B307,B310,B404,B603"]
       verbose: true
       files: \.(py)$
       exclude: |
