--- a/tox.ini
+++ b/tox.ini
@@ -5,13 +5,13 @@ statistics = True
 show-source = True
 
 [tox]
-envlist = py{39}-{lint,build,ci,provision,stream,stream_check,dash}
+envlist = py{310}-{lint,build,ci,provision,stream,stream_check,dash}
 skipsdist = True
 skip_install = True
 basepython =
-    3.9.7: python3.9.7
+    3.10.4 python3.10.4
 envdir =
-    3.9.7: {toxworkdir}/3.9.7
+    3.10.4: {toxworkdir}/3.10.4
 setenv =
     PYTHONPATH = {toxinidir}
     PYTHONHASHSEED = 0
@@ -34,7 +34,7 @@ platform = build: linux
            dash: linux
 passenv = *
 deps =
-    lint: pre-commit
+    lint: pre-commit==2.20.0
     build: {[jupyter]deps}
     build: {[base]deps}
     provision: ansible==5.1.0
