--- a/v1/tox.ini
+++ b/v1/tox.ini
@@ -22,7 +22,13 @@ deps = jupyter==1.0.0
        jupyterlab==3.4.7
 
 [base]
-deps = -rrequirements.txt
+deps = numpy==1.23.2
+       pandas==1.5.0
+       openpyxl==3.0.10
+       altair==4.2.0
+       python-dotenv==0.21.0
+       emoji==2.1.0
+       boto3==1.24.81
 
 [testenv]
 platform = build: linux
